# AgentStore

./: Cargo.toml  README.md  index.html  install.sh
.claude/skills/agentstore/: agentstore.md
.github/workflows/: pages.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  platforms.rs  storage.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns
crates/gui/src/: lib.rs  main.rs
docs/: logo-options.html  logo-shopping-bag.html
docs/superpowers/plans/: 2026-04-08-agentstore-lite.md
docs/superpowers/specs/: 2026-04-08-agentstore-lite-design.md
frontend/: index.html  package-lock.json  package.json  playwright.landing.config.ts  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: HowItWorksSteps.tsx  InstallDialog.tsx  Sidebar.tsx
frontend/src/views/: AboutView.tsx  InstalledView.tsx  SearchView.tsx  SettingsView.tsx
frontend/tests/: installed.spec.ts  landing.spec.ts
landing/: index.html
tests/: cli_integration.sh
