[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Jay Moore"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
thiserror = "2"
