[package]
name = "agentstore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentstore"
path = "src/main.rs"

[dependencies]
agentstore-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
